--- a/Client/styles/indexStyles/_header.scss
+++ b/Client/styles/indexStyles/_header.scss
@@ -35,9 +35,11 @@ header {
     &:hover {
       transform: translateY(-2px);
       transition: 0.2s;
+      color: $primary-color;
     }
   }
   .open-account {
     @include openAccount();
+
   }
 }
