--- a/Client/styles/accountStyles/style.css
+++ b/Client/styles/accountStyles/style.css
@@ -1,1 +1,134 @@
-/*# sourceMappingURL=style.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,600;1,100;1,200;1,300;1,400;1,500&display=swap");
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  font-family: "Montserrat", sans-serif;
+}
+
+body {
+  padding: 1rem;
+}
+
+.balance {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  max-width: 100%;
+}
+.balance h1 {
+  font-size: 1rem;
+}
+.balance #current-balance {
+  font-size: 2rem;
+  margin-right: 5rem;
+}
+
+.account {
+  display: flex;
+  background-color: rgb(255, 255, 255);
+  align-items: center;
+  gap: 4rem;
+  flex-wrap: wrap;
+}
+.account .movements {
+  margin-top: 2rem;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  background-color: #f3f3f3;
+  padding: 1rem;
+  overflow-y: scroll;
+  border-radius: 25px;
+  gap: 1rem;
+  height: 400px;
+  box-shadow: -1px 1px 14px 0px rgba(0, 0, 0, 0.75);
+}
+.account .movements .mov {
+  padding: 0.5rem;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  border-bottom: solid 1px rgb(84, 77, 77);
+}
+.account .movements .mov .mov-type {
+  font-size: 0.9rem;
+  background-color: #5ec576;
+  border-radius: 20px;
+  padding: 0.3rem;
+  color: white;
+}
+.account .movements .mov .mov-value {
+  margin-left: 20rem;
+}
+.account .options {
+  display: flex;
+  flex-direction: column;
+  max-width: 100%;
+  gap: 1rem;
+}
+.account .options .box {
+  padding: 1rem;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  box-shadow: -1px 1px 14px 0px rgba(0, 0, 0, 0.75);
+}
+.account .options .box p {
+  color: white;
+}
+.account .options .box label {
+  color: white;
+}
+.account .options .box input {
+  font-size: 1rem;
+}
+.account .options .box button {
+  width: 100%;
+  background-color: white;
+  border: 0;
+  border-radius: 10px;
+  padding: 0.2rem;
+  font-size: 1rem;
+  transition: 0.3s;
+}
+.account .options .box button:hover {
+  background-color: rgb(218, 218, 218);
+}
+.account .options .box button:active {
+  background-color: rgb(161, 158, 158);
+}
+.account .options .request-loan {
+  background: rgb(94, 197, 118);
+  background: linear-gradient(343deg, rgb(94, 197, 118) 41%, rgb(66, 138, 82) 100%, rgb(0, 0, 0) 100%, rgb(2, 0, 36) 100%);
+}
+.account .options .transfer {
+  background: rgb(230, 155, 0);
+  background: linear-gradient(343deg, rgb(230, 155, 0) 37%, rgb(213, 144, 0) 51%, rgb(123, 83, 0) 100%, rgb(87, 59, 0) 100%, rgb(0, 0, 0) 100%, rgb(2, 0, 36) 100%);
+}
+.account .options .transfer .inputs {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.account .options .delete {
+  background: rgb(255, 82, 82);
+  background: linear-gradient(343deg, rgb(255, 82, 82) 34%, rgb(147, 47, 47) 100%, rgb(0, 0, 0) 100%, rgb(2, 0, 36) 100%);
+}
+
+.logOut {
+  margin-top: 1rem;
+}
+.logOut button {
+  background-color: #37383d;
+  border: 0;
+  font-size: 1.2rem;
+  border-radius: 10px;
+  color: white;
+  padding: 0.5rem;
+  transition: 0.4s;
+}
+.logOut button:hover {
+  transform: translateY(-2px);
+}/*# sourceMappingURL=style.css.map */
