--- a/Client/styles/indexStyles/style.css
+++ b/Client/styles/indexStyles/style.css
@@ -46,6 +46,7 @@ header a {
 header a:hover {
   transform: translateY(-2px);
   transition: 0.2s;
+  color: #5ec576;
 }
 header .open-account {
   background-color: #5ec576;
