--- a/Client/styles/registerStyles/style.css
+++ b/Client/styles/registerStyles/style.css
@@ -54,4 +54,34 @@ html {
 .container a {
   text-decoration: none;
   color: black;
+}
+
+.fadeOut {
+  animation-name: fadeOut;
+  animation-duration: 1s;
+}
+
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    display: none;
+  }
+}
+.fadeIN {
+  animation-name: fadeIN;
+  transition: 1s;
+}
+
+@keyframes fadeIN {
+  0% {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }/*# sourceMappingURL=style.css.map */
