--- a/Client/styles/registerStyles/style.scss
+++ b/Client/styles/registerStyles/style.scss
@@ -82,3 +82,41 @@ html {
     color: black;
   }
 }
+
+
+// ----------------------------------------------------
+
+.fadeOut{
+  animation-name: fadeOut;
+  animation-duration: 1s;
+
+}
+
+@keyframes fadeOut{
+  0%{
+    opacity: 1;
+
+  }
+
+  100%{
+    opacity: 0;
+    display: none;
+  }
+}
+
+.fadeIN{
+  animation-name: fadeIN;
+  transition: 1s;
+}
+
+@keyframes fadeIN{
+  0%{
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+
+  100%{
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
